[package]
name = "pon"
version = "0.1.0"
authors = ["Keringar <git@keringar.xyz>"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
lto = true
debug = true

[dependencies]
cortex-m = "0.4.3"
cortex-m-semihosting = "0.2.0"
cortex-m-rtfm = "0.3.1"
embedded-hal = "0.1.2"

[dependencies.cortex-m-rt]
version = "0.3.12"
features = ["abort-on-panic"]

[dependencies.stm32f40x-hal]
path = "../stm32f40x-hal"
features = ["rt"]